package org.example.firstcmpproject.core.utils

const val EMAIL_OR_PHONE_TEXT_FIELD = "EMAIL_OR_PHONE_TEXT_FIELD"
const val SIGN_IN_BUTTON = "SIGN_IN_BUTTON"
const val CATEGORY_SECTION =  "CATEGORY_SECTION"
const val GENRE_NAME = "GENRE_NAME"

const val FEATURE_MOVIE_IMAGE = "FEATURE_MOVIE_IMAGE"
const val MOVIE_DETAIL_IMAGE = "MOVIE_DETAIL_IMAGE"
const val MOVIE_NAME= "MOVIE_NAME"


const val MOVIE_DETAIL_LAZY_COLUMN = "MOVIE_DETAIL_LAZY_COLUMN"
const val SIMILAR_MOVIE_GRID = "SIMILAR_MOVIE_GRID"

const val SIMILAR_MOVIE_ITEM = "SIMILAR_MOVIE_ITEM"

